force-app/main/default/objects/Quality_Indicator_Summary__c/fields/QI_Prediction_calc_date__c.field-meta.xml
<CustomField>
    <fullName>QI_Prediction_calc_date__c</fullName>
    <label>QI Prediction calc date</label>
    <type>Date</type>
</CustomField>