force-app/main/default/objects/Quality_Indicator_Summary__c/fields/QI_RATING__c.field-meta.xml
<CustomField>
    <fullName>QI_RATING__c</fullName>
    <label>QI Rating Summary</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>