force-app/main/default/objects/Quality_Indicator_Summary__c/fields/QI_Rating_Label__c.field-meta.xml
<CustomField>
    <fullName>QI_Rating_Label__c</fullName>
    <formula>IF(Quality_Indicator_Rating__c  = 0 &amp;&amp; Rating_Exemption_Granted__c = true, &quot;No rating available&quot;,
IF(Quality_Indicator_Rating__c  = 1, &quot;Significant Improvement Needed&quot;,
IF(Quality_Indicator_Rating__c  = 2, &quot;Improvement Needed&quot;,
IF(Quality_Indicator_Rating__c  = 3, &quot;Acceptable&quot;,
IF(Quality_Indicator_Rating__c  = 4, &quot;Good&quot;,
IF(Quality_Indicator_Rating__c  = 5, &quot;Excellent&quot;,
&quot;No rating available&quot;
))))))</formula>
    <label>Quality Indicator Rating Label</label>
    <type>Text</type>
</CustomField>