force-app/main/default/objects/Quality_Indicator_Summary__c/fields/QI_Sector_Avg_FALLS__c.field-meta.xml
<CustomField>
    <fullName>QI_Sector_Avg_FALLS__c</fullName>
    <label>QI Sector Avg FALLS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>