force-app/main/default/objects/Quality_Indicator_Summary__c/fields/QIS_Versions__c.field-meta.xml
<CustomField>
    <fullName>QIS_Versions__c</fullName>
    <description>This field is created to count the total version records</description>
    <label>QIS Versions</label>
    <summaryForeignKey>Quality_Indicator_Summary_Version__c.Quality_Indicator_Summary__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>