force-app/main/default/objects/Quality_Indicator_Summary__c/fields/QITarget_Record__c.field-meta.xml
<CustomField>
    <fullName>QITarget_Record__c</fullName>
    <label>QITarget Record</label>
    <length>20</length>
    <type>Text</type>
</CustomField>