force-app/main/default/objects/Quality_Indicator_Summary__c/fields/Quality_Indicator_Details__c.field-meta.xml
<CustomField>
    <fullName>Quality_Indicator_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quality Indicator Details</label>
    <referenceTo>Quality_Indicator_Details__c</referenceTo>
    <relationshipLabel>Quality Indicator Summary</relationshipLabel>
    <relationshipName>Quality_Indicator_Summary</relationshipName>
    <type>Lookup</type>
</CustomField>