force-app/main/default/objects/Quality_Indicator_Summary__c/fields/Quality_Indicator_Rating__c.field-meta.xml
<CustomField>
    <fullName>Quality_Indicator_Rating__c</fullName>
    <description>Quality Indicator number rating, out of 5</description>
    <label>Quality Indicator Rating</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>