force-app/main/default/objects/Quality_Indicator_Summary__c/fields/Quality_Indicator_Rating_Label__c.field-meta.xml
<CustomField>
    <fullName>Quality_Indicator_Rating_Label__c</fullName>
    <label>Quality Indicator Rating Label (OLD)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Star_Rating_Label</valueSetName>
    </valueSet>
</CustomField>