force-app/main/default/objects/Quality_Indicator_Summary__c/fields/Quality_Indicator_Rating_Stars__c.field-meta.xml
<CustomField>
    <fullName>Quality_Indicator_Rating_Stars__c</fullName>
    <formula>IMAGE(
IF(Quality_Indicator_Rating__c = 5, &quot;/img/samples/stars_500.gif&quot;,
IF(Quality_Indicator_Rating__c = 4, &quot;/img/samples/stars_400.gif&quot;,
IF(Quality_Indicator_Rating__c = 3, &quot;/img/samples/stars_300.gif&quot;,
IF(Quality_Indicator_Rating__c = 2, &quot;/img/samples/stars_200.gif&quot;,
IF(Quality_Indicator_Rating__c = 1, &quot;/img/samples/stars_100.gif&quot;, &quot;/img/samples/stars_000.gif&quot;
))))),
&quot;QI Stars&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quality Indicator Rating Stars</label>
    <type>Text</type>
</CustomField>