force-app/main/default/objects/Quality_Indicator_Summary__c/fields/Quality_of_Life_Record__c.field-meta.xml
<CustomField>
    <fullName>Quality_of_Life_Record__c</fullName>
    <label>Quality of Life Record</label>
    <length>20</length>
    <type>Text</type>
</CustomField>