force-app/main/default/objects/Quality_Indicator_Summary__c/fields/Rating_Calc_Date__c.field-meta.xml
<CustomField>
    <fullName>Rating_Calc_Date__c</fullName>
    <label>Calculation Date</label>
    <type>DateTime</type>
</CustomField>