force-app/main/default/objects/Quality_Indicator_Summary__c/fields/REPORTING_PERIOD__c.field-meta.xml
<CustomField>
    <fullName>REPORTING_PERIOD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reporting Period</label>
    <referenceTo>Reporting_Period__c</referenceTo>
    <relationshipLabel>Quality Indicator Summary</relationshipLabel>
    <relationshipName>Quality_Indicator_Summary</relationshipName>
    <type>Lookup</type>
</CustomField>