force-app/main/default/objects/Quality_Indicator_Summary__c/fields/ReportingDueDate__c.field-meta.xml
<CustomField>
    <fullName>ReportingDueDate__c</fullName>
    <formula>REPORTING_PERIOD__r.QI_Submission_Due_Dt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ReportingDueDate</label>
    <type>Date</type>
</CustomField>