force-app/main/default/objects/Quality_Indicator_Summary__c/fields/ReportingPeriodName__c.field-meta.xml
<CustomField>
    <fullName>ReportingPeriodName__c</fullName>
    <formula>REPORTING_PERIOD__r.Reporting_Period_Short__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ReportingPeriodName</label>
    <type>Text</type>
</CustomField>