force-app/main/default/objects/Quality_Indicator_Summary__c/fields/Requested_by__c.field-meta.xml
<CustomField>
    <fullName>Requested_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requested by</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Quality Indicator Summary</relationshipLabel>
    <relationshipName>Quality_Indicator_Summary</relationshipName>
    <type>Lookup</type>
</CustomField>