force-app/main/default/objects/Quality_Indicator_Summary__c/fields/Residents_Experienced_AntiPsy_Observed__c.field-meta.xml
<CustomField>
    <fullName>Residents_Experienced_AntiPsy_Observed__c</fullName>
    <label>Residents Experienced AntiPsy Observed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>