force-app/main/default/objects/Quality_Indicator_Summary__c/fields/Residents_Experienced_FMI_Risk_Adjust__c.field-meta.xml
<CustomField>
    <fullName>Residents_Experienced_FMI_Risk_Adjust__c</fullName>
    <label>Residents Experienced FMI Risk Adjust</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>