force-app/main/default/objects/Quality_Indicator_Summary__c/fields/Residents_Experienced_PR_Risk_Adjusted__c.field-meta.xml
<CustomField>
    <fullName>Residents_Experienced_PR_Risk_Adjusted__c</fullName>
    <label>Residents Experienced PR Risk Adjusted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>