force-app/main/default/objects/Quality_Indicator_Summary__c/fields/Restraint_Record__c.field-meta.xml
<CustomField>
    <fullName>Restraint_Record__c</fullName>
    <label>Restraint Record</label>
    <length>20</length>
    <type>Text</type>
</CustomField>