force-app/main/default/objects/Quality_Indicator_Summary__c/fields/RISK_ADJ_QI__c.field-meta.xml
<CustomField>
    <fullName>RISK_ADJ_QI__c</fullName>
    <label>Risk Qlty Ind</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>