force-app/main/default/objects/Quality_Indicator_Summary__c/fields/Risk_Adjusted_Falls_with_injury_Display__c.field-meta.xml
<CustomField>
    <fullName>Risk_Adjusted_Falls_with_injury_Display__c</fullName>
    <formula>IF(ISBLANK(Risk_Adjusted_Falls_with_injury__c ), 
    NULL,
    IF(Risk_Adjusted_Falls_with_injury__c  &gt; 1, 
        1, 
        IF(Risk_Adjusted_Falls_with_injury__c  &lt; 0, 0 , Risk_Adjusted_Falls_with_injury__c) 
    )
)</formula>
    <label>Risk Adjusted Falls with injury Display</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>