force-app/main/default/objects/Quality_Indicator_Summary__c/fields/Risk_Adjusted_Falls_with_Major_injury__c.field-meta.xml
<CustomField>
    <fullName>Risk_Adjusted_Falls_with_Major_injury__c</fullName>
    <description>Risk Adjusted Falls with Major injury</description>
    <label>Risk Adjusted Falls with Major injury</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>