force-app/main/default/objects/Quality_Indicator_Summary__c/fields/Risk_Adjusted_PI__c.field-meta.xml
<CustomField>
    <fullName>Risk_Adjusted_PI__c</fullName>
    <formula>(Risk_Adjusted_PI_Level2__c + Risk_Adjusted_PI_Level3__c + Risk_Adjusted_PI_Level4__c + Risk_Adjusted_Unstageable_PI__c + Risk_Adjusted_DT_PI__c)/5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Risk Adjusted PI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>