force-app/main/default/objects/Quality_Indicator_Summary__c/fields/Risk_Adjusted_PI_Display__c.field-meta.xml
<CustomField>
    <fullName>Risk_Adjusted_PI_Display__c</fullName>
    <formula>IF(ISBLANK(Risk_Adjusted_PI_Level2__c) &amp;&amp; ISBLANK(Risk_Adjusted_PI_Level3__c) &amp;&amp; 
    ISBLANK(Risk_Adjusted_PI_Level4__c) &amp;&amp; ISBLANK(Risk_Adjusted_Unstageable_PI__c) &amp;&amp; ISBLANK(Risk_Adjusted_DT_PI__c), 
    NULL,
    IF(Risk_Adjusted_PI__c &gt; 1, 
        1, 
        IF(Risk_Adjusted_PI__c &lt; 0, 0 , Risk_Adjusted_PI__c) 
    )
)</formula>
    <label>Risk Adjusted PI Display</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>