force-app/main/default/objects/Quality_Indicator_Summary__c/fields/Risk_Adjusted_SUWL_Display__c.field-meta.xml
<CustomField>
    <fullName>Risk_Adjusted_SUWL_Display__c</fullName>
    <formula>IF(ISBLANK(Risk_Adjusted_SUWL__c), 
    NULL,
    IF(Risk_Adjusted_SUWL__c &gt; 1, 
        1, 
        IF(Risk_Adjusted_SUWL__c &lt; 0, 0, Risk_Adjusted_SUWL__c) 
    )
)</formula>
    <label>Risk_Adjusted_SUWL Display</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>