force-app/main/default/objects/Quality_Indicator_Summary__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service</label>
    <referenceTo>BusinessLicense</referenceTo>
    <relationshipLabel>Quality Indicator Summary</relationshipLabel>
    <relationshipName>Quality_Indicator_Summary</relationshipName>
    <type>Lookup</type>
</CustomField>