force-app/main/default/objects/Quality_Indicator_Summary__c/fields/SERVICE_ID__c.field-meta.xml
<CustomField>
    <fullName>SERVICE_ID__c</fullName>
    <formula>SERVICE_ACCOUNT_ID__r.Service_Name__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SF Service Id</label>
    <type>Text</type>
</CustomField>