force-app/main/default/objects/Quality_Indicator_Summary__c/fields/SERVICE_ID_TXT__c.field-meta.xml
<CustomField>
    <fullName>SERVICE_ID_TXT__c</fullName>
    <description>Service Id created as field to enable External Sharing</description>
    <label>Service Id Txt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>