force-app/main/default/objects/Quality_Indicator_Summary__c/fields/Significant_Weight_Loss_Quintile__c.field-meta.xml
<CustomField>
    <fullName>Significant_Weight_Loss_Quintile__c</fullName>
    <description>Risk Adjusted</description>
    <label>Significant Weight Loss Quintile</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>