force-app/main/default/objects/Quality_Indicator_Summary__c/fields/Stage_4_Pressure_Injury_Quintile__c.field-meta.xml
<CustomField>
    <fullName>Stage_4_Pressure_Injury_Quintile__c</fullName>
    <description>Risk Adjusted</description>
    <label>Stage 4 Pressure Injury Quintile</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>