force-app/main/default/objects/Quality_Indicator_Summary__c/fields/Submitted_By__c.field-meta.xml
<CustomField>
    <fullName>Submitted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>capture the submitted by user</inlineHelpText>
    <label>Submitted By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quality_Indicator_Summary</relationshipName>
    <type>Lookup</type>
</CustomField>