force-app/main/default/objects/Quality_Indicator_Summary__c/fields/Total_QI_Domain_Rating_Score__c.field-meta.xml
<CustomField>
    <fullName>Total_QI_Domain_Rating_Score__c</fullName>
    <formula>(Falls_Domain_Score__c + Medication_Management_Domain_Score__c + Physical_Restraint_Domain_Score__c + Pressure_Injury_Domain_Score__c + Weight_Loss_Domain_Score__c)</formula>
    <label>Total QI Domain Rating Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>