force-app/main/default/objects/Quality_Indicator_Summary__c/fields/Unplanned_Sig_Weight_Loss__c.field-meta.xml
<CustomField>
    <fullName>Unplanned_Sig_Weight_Loss__c</fullName>
    <label>Unplanned Sig Weight Loss</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>