force-app/main/default/objects/Quality_Indicator_Summary__c/fields/UWL_Compare_with_National_Average__c.field-meta.xml
<CustomField>
    <fullName>UWL_Compare_with_National_Average__c</fullName>
    <formula>Risk_Adjusted_SUWL_Display__c - National_Statistic__r.National_percentage_significant_UWL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UWL Compare with National Average</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>