force-app/main/default/objects/Quality_Indicator_Summary__c/fields/Version_Number__c.field-meta.xml
<CustomField>
    <fullName>Version_Number__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Used to capture the current version number of the QI submission. Increments by 1 every time the QIS gets submitted.</description>
    <inlineHelpText>Current QI version number</inlineHelpText>
    <label>Version Number</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>