force-app/main/default/objects/Quality_Indicator_Summary__c/fields/Weightloss_Record__c.field-meta.xml
<CustomField>
    <fullName>Weightloss_Record__c</fullName>
    <label>Weightloss Record</label>
    <length>20</length>
    <type>Text</type>
</CustomField>