force-app/main/default/objects/Quality_Indicator_Summary__c/fields/Workforce_Record__c.field-meta.xml
<CustomField>
    <fullName>Workforce_Record__c</fullName>
    <description>Stores Record Id for QI Data: Workforce Domain</description>
    <label>Workforce Record</label>
    <length>20</length>
    <type>Text</type>
</CustomField>