force-app/main/default/objects/Quality_Indicator_Summary__c/recordTypes/Falls_and_Major_injury.recordType-meta.xml
<RecordType>
    <fullName>Falls_and_Major_injury</fullName>
    <active>false</active>
    <label>Falls and Major injury</label>
</RecordType>