force-app/main/default/objects/Quality_Indicator_Summary__c/recordTypes/Medication_management.recordType-meta.xml
<RecordType>
    <fullName>Medication_management</fullName>
    <active>false</active>
    <label>Medication management</label>
</RecordType>