force-app/main/default/objects/Quality_Indicator_Summary__c/recordTypes/Physical_restraint.recordType-meta.xml
<RecordType>
    <fullName>Physical_restraint</fullName>
    <active>false</active>
    <label>Physical restraint</label>
</RecordType>