force-app/main/default/objects/Quality_Indicator_Summary__c/recordTypes/Pressure_injuries.recordType-meta.xml
<RecordType>
    <fullName>Pressure_injuries</fullName>
    <active>false</active>
    <label>Pressure injuries</label>
</RecordType>