force-app/main/default/objects/Quality_Indicator_Summary__c/recordTypes/Unplanned_weight_loss.recordType-meta.xml
<RecordType>
    <fullName>Unplanned_weight_loss</fullName>
    <active>false</active>
    <label>Unplanned weight loss</label>
</RecordType>