force-app/main/default/objects/Quality_Indicator_Summary__c/validationRules/BlankAccount.validationRule-meta.xml
<ValidationRule>
    <fullName>BlankAccount</fullName>
    <active>true</active>
    <description>Lookup to Account should not be blank</description>
    <errorConditionFormula>ISBLANK( PROVIDER_ID__c )</errorConditionFormula>
    <errorDisplayField>PROVIDER_ID__c</errorDisplayField>
    <errorMessage>Account should not be blank</errorMessage>
</ValidationRule>