force-app/main/default/objects/Quality_Indicator_Summary__c/validationRules/BlankServiceAccountRelationship.validationRule-meta.xml
<ValidationRule>
    <fullName>BlankServiceAccountRelationship</fullName>
    <active>true</active>
    <description>Lookup to Service Account Relationship</description>
    <errorConditionFormula>ISBLANK( SERVICE_ACCOUNT_ID__c )</errorConditionFormula>
    <errorDisplayField>SERVICE_ACCOUNT_ID__c</errorDisplayField>
    <errorMessage>Service Account Relationship should not be blank</errorMessage>
</ValidationRule>